fix:주요기능 및 overflow

--- a/frontend/src/pages/ReportPage/style.scss
+++ b/frontend/src/pages/ReportPage/style.scss
@@ -30,8 +30,27 @@
   margin-right: auto;
   width:80%;
   height:60vh;
+  min-height: 360px;
   border: 1px solid black;
   border-radius: 10px;
+
+}
+.report-box-bugbox {
+  height: 52vh;
+  min-height:295px;
+  overflow: auto;
+}
+.report-box-bugbox::-webkit-scrollbar {
+  width: 10px;
+}
+.report-box-bugbox::-webkit-scrollbar-thumb {
+  background-color: #C3E2F9;
+  border-radius: 10px;
+}
+.report-box-bugbox::-webkit-scrollbar-track {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 5px white;
 }
 .solve-h2 {
   color: #3396F4;
